# chess-rs

./: .gitignore  Cargo.toml  winner
src/: agent.rs  chess.rs  main.rs  moves.rs  pieces.rs  traits.rs
