[package]
name = "chess-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
useful_shit = { path = "../useful_shit" }
serde_json = "1.0.67"
serde = "1.0.130"
num = "0.4.0"
rand = "0.8.4"
ron = "0.6.5"
[features]
test = []
run = []